Document gem install for 2.0, pin JRuby 10.1.1.0, and add the 2.0 changelog.
Co-authored-by: Cursor <cursoragent@cursor.com>